summarize.py+tex improvements

--- a/res/utils.sty
+++ b/res/utils.sty
@@ -15,9 +15,10 @@
     \immediate\write18{ls "../out/#1/#2/#3" | grep "ζ=*" | cut -d = -f 2 | sort -n | tr "\string\n" "," | sed "s/,$//" > ζs.txt}
     \CatchFileDef{\zetas}{ζs.txt}{\endlinechar=-1}
     \immediate\write18{rm ζs.txt}
-
+    
     \foreach \ζ in \zetas{
         \addplot table [x=k, y=min_#4_loss_mean] {../out/#1/#2/#3/ζ=\ζ/summary.dat};
+        \edef\tmp{\noexpand\addlegendentry{$\zeta$=\ζ}}\tmp
         \pgfplotsset{cycle list shift=-1}
         \addplot+[name path=top, opacity=0, forget plot] table [x=k, y=min_#4_loss_top] {../out/#1/#2/#3/ζ=\ζ/summary.dat};
         \addplot+[name path=bot, opacity=0, forget plot] table [x=k, y=min_#4_loss_bot] {../out/#1/#2/#3/ζ=\ζ/summary.dat};
@@ -52,19 +53,17 @@
 
     \begin{tikzpicture}
 
-        \begin{groupplot}[group style={rows=2, columns=2, horizontal sep=1.3cm}, xlabel=k, xmode=log, scale=0.65]
+        \begin{groupplot}[group style={rows=2, columns=2, horizontal sep=1.3cm},
+                          scale=0.6,
+                          legend to name=leg:#2,
+                          legend columns=-1,
+                          xlabel=k,
+                          xmode=log]
             \plotparametrization{#1}{#2}{sp}
             \plotparametrization{#1}{#2}{mup}
         \end{groupplot}
 
-        \begin{axis}[xmin=0, xmax=1, ymin=0, ymax=1, legend columns=-1, hide axis, scale only axis, width=1mm, legend to name=leg:#1/#2]
-            \foreach \ζ in \zetas{
-                \addplot+[mark=none] coordinates {(0,0)};
-                \expandafter\addlegendentry\expandafter{\ζ}
-            }
-        \end{axis}
-
-        \path (group c1r1.north east) -- node[above]{\pgfplotslegendfromname{leg:#1/#2}} (group c2r1.north west);
+        \path (group c1r1.north east) -- node[above]{\pgfplotslegendfromname{leg:#2}} (group c2r1.north west);
 
     \end{tikzpicture}
 }
