--- a/res/plotparametrization.tex
+++ b/res/plotparametrization.tex
@@ -27,22 +27,20 @@
 
 \begin{tikzpicture}
 
-    \begin{groupplot}[group style={rows=1, columns=2, horizontal sep=1.3cm}, xlabel=k, xmode=log, scale=0.65]
+    \begin{groupplot}[group style={rows=1, columns=2, horizontal sep=1.3cm},
+                      scale=0.6,
+                      legend to name=leg:\parametrization,
+                      legend columns=-1,
+                      xlabel=k,
+                      xmode=log]
         \plotparametrization{\dataset}{\family}{\parametrization}
     \end{groupplot}
 
-    \begin{axis}[xmin=0, xmax=1, ymin=0, ymax=1, legend columns=-1, hide axis, scale only axis, width=1mm, legend to name=leg:\dataset/\family/parametrization]
-        \foreach \ζ in \zetas{
-            \addplot+[mark=none] coordinates {(0,0)};
-            \expandafter\addlegendentry\expandafter{\ζ}
-        }
-    \end{axis}
-
-    \path (group c1r1.north east) -- node[above]{\pgfplotslegendfromname{leg:\dataset/\family/parametrization}} (group c2r1.north west);
+    \path (group c1r1.north east) -- node[above]{\pgfplotslegendfromname{leg:\parametrization}} (group c2r1.north west);
 
 \end{tikzpicture}
 
-\caption{\dataset/\family/parametrization}
+\caption{\dataset/\family/\parametrization}
 \end{figure}
 
 \end{document}
