--- a/res/utils.sty
+++ b/res/utils.sty
@@ -8,6 +8,7 @@
     \usepgfplotslibrary{fillbetween}
     \usepgfplotslibrary{groupplots}
 \RequirePackage{xstring}
+\RequirePackage{underscore}
 
 \newcommand{\plotspl}[4]{
     % #1: dataset, #2: family, #3: parametrization, #4: split
