--- a/res/plotfamily.tex
+++ b/res/plotfamily.tex
@@ -8,7 +8,7 @@
 
 \begin{figure}
 \Centering
-\plotfamily{\dataset}{\family}
+\plotfamily{\dataset}{\family}{\hyper}
 \caption{\dataset/\family}
 \end{figure}
 
