--- a/res/features_cdf.tex
+++ b/res/features_cdf.tex
@@ -21,7 +21,7 @@
     \addlegendentry{sp}
     \addplot+[mark=none] table {../out/mup1featurescdf.dat};
     \addlegendentry{mup}
-    \addplot+[mark=none] table {../out/mupthresh1featurescdf.dat};
+    \addplot+[mark=none,color=green!70!black] table {../out/mupthresh1featurescdf.dat};
     \addlegendentry{mupthres}
 
     \nextgroupplot[title={$\zeta=2$}]
@@ -29,7 +29,7 @@
     \addlegendentry{sp}
     \addplot+[mark=none] table {../out/mup2featurescdf.dat};
     \addlegendentry{mup}
-    \addplot+[mark=none] table {../out/mupthresh2featurescdf.dat};
+    \addplot+[mark=none,color=green!70!black] table {../out/mupthresh2featurescdf.dat};
     \addlegendentry{mupthres}
 
     \nextgroupplot[title={$\zeta=4$}]
@@ -37,7 +37,7 @@
     \addlegendentry{sp}
     \addplot+[mark=none] table {../out/mup4featurescdf.dat};
     \addlegendentry{mup}
-    \addplot+[mark=none] table {../out/mupthresh4featurescdf.dat};
+    \addplot+[mark=none,color=green!70!black] table {../out/mupthresh4featurescdf.dat};
     \addlegendentry{mupthres}
 
     \nextgroupplot[title={$\zeta=8$}]
@@ -45,7 +45,7 @@
     \addlegendentry{sp}
     \addplot+[mark=none] table {../out/mup8featurescdf.dat};
     \addlegendentry{mup}
-    \addplot+[mark=none] table {../out/mupthresh8featurescdf.dat};
+    \addplot+[mark=none,color=green!70!black] table {../out/mupthresh8featurescdf.dat};
     \addlegendentry{mupthres}
 
     \nextgroupplot[title={$\zeta=16$}]
@@ -53,7 +53,7 @@
     \addlegendentry{sp}
     \addplot+[mark=none] table {../out/mup16featurescdf.dat};
     \addlegendentry{mup}
-    \addplot+[mark=none] table {../out/mupthresh16featurescdf.dat};
+    \addplot+[mark=none,color=green!70!black] table {../out/mupthresh16featurescdf.dat};
     \addlegendentry{mupthres}
 \end{groupplot}
 
