--- a/res/features_matrix.tex
+++ b/res/features_matrix.tex
@@ -22,12 +22,14 @@
              enlargelimits=false,
              xlabel=features,
              ylabel=tokens,
-             label style={font=\LARGE},
-             tick label style={font=\LARGE},
+             label style={font=\Huge},
+             tick label style={font=\Huge},
              colorbar horizontal,
              colorbar style={anchor=outer south,
                              at={(0.5,1)},
-                             xtick={\pgfkeysvalueof{/pgfplots/xmin}, 0, \pgfkeysvalueof{/pgfplots/xmax}}}]
+                             xtick={\pgfkeysvalueof{/pgfplots/xmin}, 0, \pgfkeysvalueof{/pgfplots/xmax}},
+                             scaled ticks=false,
+                             point meta/.style={/pgf/number format/fixed, /pgf/number format/precision=2}}]
     \addplot[matrix plot, point meta=explicit] table [meta=z] {\featuresmatrixpath};
 \end{axis}
 \end{tikzpicture}
