--- a/res/heat.tex
+++ b/res/heat.tex
@@ -30,7 +30,7 @@
                              xtick={\pgfkeysvalueof{/pgfplots/xmin}, 0, \pgfkeysvalueof{/pgfplots/xmax}},
                              scaled ticks=false,
                              point meta/.style={/pgf/number format/fixed, /pgf/number format/precision=2}}]
-    \addplot[matrix plot, point meta=explicit] table [meta=z] {\outlierspath};
+    \addplot[matrix plot, point meta=explicit] table [meta=z] {\heatpath};
 \end{axis}
 \end{tikzpicture}
 \end{figure}
