--- a/res/heat.tex
+++ b/res/heat.tex
@@ -2,10 +2,10 @@
     \pagestyle{empty}
 
 \usepackage[a2paper, landscape, margin=1cm]{geometry}
+\usepackage{style}
 \usepackage{ragged2e}
 \usepackage{pgfplots}
     \pgfplotsset{compat=newest}
-    \pgfplotsset{colormap/viridis}
 
 \pgfmathtruncatemacro{\maxtoken}{\context-1}
 \pgfmathtruncatemacro{\maxfeature}{\d-1}
