--- a/res/log.tex
+++ b/res/log.tex
@@ -1,9 +1,14 @@
 \documentclass{article}
     \pagestyle{empty}
+
 \usepackage[landscape]{geometry}
+\usepackage{style}
 \usepackage{ragged2e}
 \usepackage{pgfplots}
-    \pgfplotsset{compat=newest}
+    \pgfplotsset{
+        compat=newest,
+        every axis plot/.append style={no markers}
+    }
     \usepgfplotslibrary{fillbetween}
     \usepgfplotslibrary{groupplots}
 \usepackage{xstring}
@@ -14,8 +19,7 @@
 \begin{figure}[!h]
 \Centering
 \begin{tikzpicture}
-\begin{groupplot}[group style={rows=2, columns=2, horizontal sep=2.2cm, vertical sep=1.8cm},
-                  no marks]
+\begin{groupplot}[group style={rows=2, columns=2, horizontal sep=2.2cm, vertical sep=1.8cm}]
     \nextgroupplot[title=schedule, xlabel=train_batch, ylabel=lr0]
     \addplot table [x=train_batch, y=lr0] {\logpath};
 
@@ -62,8 +66,7 @@
     \Centering
     \begin{tikzpicture}
     \begin{groupplot}[group style={rows=2, columns=2, horizontal sep=2.2cm, vertical sep=1.8cm},
-                      scale=0.8,
-                      no marks]
+                      scale=0.8]
 
         \pgfmathtruncatemacro{\groupelemzeroindex}{\groupindex}
         \pgfmathtruncatemacro{\groupelemoneindex}{\groupindex+1}
