--- a/res/plotfamily.tex
+++ b/res/plotfamily.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
     \pagestyle{empty}
 
+\usepackage{style}
 \usepackage{ragged2e}
 \usepackage{utils}
 
@@ -9,7 +10,6 @@
 \begin{figure}
 \Centering
 \plotfamily{\dataset}{\family}{\hyper}
-\caption{\dataset/\family}
 \end{figure}
 
 \end{document}
