--- a/res/eigsdist.tex
+++ b/res/eigsdist.tex
@@ -2,11 +2,12 @@
     \pagestyle{empty}
 
 \usepackage[margin=1cm]{geometry}
+\usepackage{style}
 \usepackage{ragged2e}
 \usepackage{pgfplots}
     \pgfplotsset{compat=newest}
     \usepgfplotslibrary{groupplots}
-    \usepgfplotslibrary{statistics}
+    \usepgfplotslibrary{colorbrewer}
 
 \begin{document}
 
@@ -18,41 +19,56 @@
                   ybar interval,
                   enlargelimits=false,
                   ymin=0,
-                  ymax=1.1,
+                  ymax=1.2,
                   xtick={1,2,3,4,5,6,7,8,9}]
     \nextgroupplot[title={$\zeta=1$, sp}]
+    \pgfplotsset{cycle list shift=0}
     \addplot table {../out/sp1eigsdist.dat};
     \nextgroupplot[title={$\zeta=1$, mup}]
+    \pgfplotsset{cycle list shift=+1}
     \addplot table {../out/mup1eigsdist.dat};
     \nextgroupplot[title={$\zeta=1$, mupthresh}]
+    \pgfplotsset{cycle list shift=+2}
     \addplot table {../out/mupthresh1eigsdist.dat};
 
     \nextgroupplot[title={$\zeta=2$, sp}]
+    \pgfplotsset{cycle list shift=0}
     \addplot table {../out/sp2eigsdist.dat};
     \nextgroupplot[title={$\zeta=2$, mup}]
+    \pgfplotsset{cycle list shift=+1}
     \addplot table {../out/mup2eigsdist.dat};
     \nextgroupplot[title={$\zeta=2$, mupthresh}]
+    \pgfplotsset{cycle list shift=+2}
     \addplot table {../out/mupthresh2eigsdist.dat};
 
     \nextgroupplot[title={$\zeta=4$, sp}]
+    \pgfplotsset{cycle list shift=0}
     \addplot table {../out/sp4eigsdist.dat};
     \nextgroupplot[title={$\zeta=4$, mup}]
+    \pgfplotsset{cycle list shift=+1}
     \addplot table {../out/mup4eigsdist.dat};
     \nextgroupplot[title={$\zeta=4$, mupthresh}]
+    \pgfplotsset{cycle list shift=+2}
     \addplot table {../out/mupthresh4eigsdist.dat};
 
     \nextgroupplot[title={$\zeta=8$, sp}]
+    \pgfplotsset{cycle list shift=0}
     \addplot table {../out/sp8eigsdist.dat};
     \nextgroupplot[title={$\zeta=8$, mup}]
+    \pgfplotsset{cycle list shift=+1}
     \addplot table {../out/mup8eigsdist.dat};
     \nextgroupplot[title={$\zeta=8$, mupthresh}]
+    \pgfplotsset{cycle list shift=+2}
     \addplot table {../out/mupthresh8eigsdist.dat};
 
     \nextgroupplot[title={$\zeta=16$, sp}]
+    \pgfplotsset{cycle list shift=0}
     \addplot table {../out/sp16eigsdist.dat};
     \nextgroupplot[title={$\zeta=16$, mup}]
+    \pgfplotsset{cycle list shift=+1}
     \addplot table {../out/mup16eigsdist.dat};
     \nextgroupplot[title={$\zeta=16$, mupthresh}]
+    \pgfplotsset{cycle list shift=+2}
     \addplot table {../out/mupthresh16eigsdist.dat};
 \end{groupplot}
 \end{tikzpicture}
