--- a/res/similarity.tex
+++ b/res/similarity.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
     \pagestyle{empty}
 
-\usepackage[landscape, margin=1cm]{geometry}
+\usepackage[a3paper, landscape, margin=1cm]{geometry}
 \usepackage{style}
 \usepackage{ragged2e}
 \usepackage{pgfplots}
@@ -28,19 +28,19 @@
     \begin{figure}[h!]
     \Centering
     \begin{tikzpicture}
-    \begin{axis}[scale=2.6,
+    \begin{axis}[scale=4,
+                 tick label style={font=\scriptsize},
                  xticklabel style={rotate=45, anchor=north east, inner sep=0cm},
-                 node near coord style={font=\scriptsize,/pgf/number format/fixed,/pgf/number format/precision=2},
                  enlargelimits=false,
                  axis line style={draw=none},
                  tick style={draw=none},
-                 colorbar,
+                 colorbar horizontal,
+                 colorbar style={anchor=outer south,
+                                 at={(0.5,1)}},
                  xtick=data,
                  ytick=data, 
                  xticklabels from table={\similaritypath}{token1},
                  yticklabels from table={\similaritypath}{token1},
-                 nodes near coords,
-                 nodes near coords align=center,
                  point meta min=-1,
                  point meta max=+1]
         \addplot[matrix plot, point meta=explicit] table [meta index=\elemindex] {\similaritypath};
